--- a/examples/16-dog-facts/package.json
+++ b/examples/16-dog-facts/package.json
@@ -18,17 +18,13 @@
     "react-scripts": "4.0.3"
   },
   "devDependencies": {
+    "@types/lodash.shuffle": "^4.2.6",
     "@types/react": "17.0.3",
     "@types/react-dom": "17.0.3",
     "node-sass": "^5.0.0",
     "typescript": "^4.2.3"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app"
-    ]
-  },
-"browserslist": [
+  "browserslist": [
     ">0.2%",
     "not dead",
     "not ie <= 11",
